[ADD] Layout: Dynamic NavBar

--- a/apps/cosmos/src/app/globals.css
+++ b/apps/cosmos/src/app/globals.css
@@ -149,6 +149,8 @@ body {
   font-family: var(--font-inter), var(--font-prompt);
   -webkit-text-size-adjust: 100%;
   -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  -webkit-font-smoothing: subpixel-antialiased;
+  backface-visibility: hidden;
   text-rendering: optimizeLegibility;
   @apply bg-background text-base text-foreground antialiased;
 }
